--- a/app/globals.css
+++ b/app/globals.css
@@ -100,6 +100,10 @@
   --font-fredoka: 'Fredoka One', sans-serif;
   --font-poppins: 'Poppins', sans-serif;
   --font-inria: 'Inria Sans', sans-serif;
+
+  /* Breakpoints */
+  --breakpoint-2xs: 350px;
+  --breakpoint-xs: 450px;
 }
 
 @theme inline {
